# TaskManagerCPP

./: CMakeLists.txt  LICENSE  README.md  TaskManagerCPP.cbp
src/: database.cpp  database.h  main.cpp  router.cpp  router.h  server.h  task.cpp  task.h
tests/: test_tasks.cpp
